1-system/2-rabbitmq/litellm.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - rabbitmq.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: rabbitmq.unique.svc.cluster.local
            port:
              number: 15672
